# django_loggers_test

./: .gitignore  README.md  pyproject.toml
src/django_loggers_test/: __init__.py  django_loggers_test.py
